Add bottom sheet and toggle button to detection activity
fixme: toggle button in detection activity is not yet working as expected

--- a/TUM_Lens/app/src/main/res/layout/activity_camera_roll.xml
+++ b/TUM_Lens/app/src/main/res/layout/activity_camera_roll.xml
@@ -116,7 +116,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="12dp"
-                app:layout_anchor="@id/bottom_sheet"
+                app:layout_anchor="@id/bottom_sheet_view"
                 android:layout_marginBottom="-10dp"
                 android:background="@drawable/shadow"/>
 
@@ -124,7 +124,7 @@
             <androidx.core.widget.NestedScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/bottom_sheet"
+                android:id="@+id/bottom_sheet_view"
 
                 app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
                 app:behavior_hideable="false"
