--- a/TUM_Lens/app/src/main/res/layout/activity_classification.xml
+++ b/TUM_Lens/app/src/main/res/layout/activity_classification.xml
@@ -69,12 +69,12 @@
 
     <!--  BOTTOM SHEET  -->
     <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:id="@id/bottom_sheet_layout"
+        android:id="@+id/bottom_sheet_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <androidx.core.widget.NestedScrollView
-            android:id="@+id/bottom_sheet"
+            android:id="@+id/activity_classification_bottom_sheet_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:alpha="0.85"
