--- a/TUM_Lens/app/src/main/res/layout/activity_detection_bottom_sheet.xml
+++ b/TUM_Lens/app/src/main/res/layout/activity_detection_bottom_sheet.xml
@@ -1,36 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/bottom_sheet_layout"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_detection_bottom_sheet_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center_horizontal"
-    android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:padding="8dp"
-    app:behavior_hideable="true"
-    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
+    android:padding="16dp">
 
-    <LinearLayout
-        android:id="@+id/gesture_layout"
+    <!--  DRAG INDICATOR of bottom sheet  -->
+    <ImageView
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="4dp"
+        android:src="@drawable/ic_spacer"
+        tools:ignore="ContentDescription" />
+
+    <!--  HEADING of bottom sheet  -->
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingTop="10dp"
-        android:paddingBottom="20dp">
-    </LinearLayout>
+        android:paddingBottom="8dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="@string/specs"
+        android:textSize="20sp"
+        android:textColor="@color/black" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingBottom="8dp" >
 
         <TextView
             android:id="@+id/frame"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:text="Frame"
             android:textColor="@android:color/black" />
 
@@ -38,7 +43,6 @@
             android:id="@+id/frame_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:gravity="right"
             android:text="640*480"
             android:textColor="@android:color/black" />
@@ -47,13 +51,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingBottom="8dp" >
 
         <TextView
             android:id="@+id/crop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:text="Crop"
             android:textColor="@android:color/black" />
 
@@ -61,24 +65,21 @@
             android:id="@+id/crop_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:gravity="right"
             android:text="640*480"
             android:textColor="@android:color/black" />
     </LinearLayout>
 
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingBottom="8dp" >
 
         <TextView
             android:id="@+id/inference"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:text="Inference Time"
             android:textColor="@android:color/black" />
 
@@ -86,7 +87,6 @@
             android:id="@+id/inference_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:gravity="right"
             android:text="640*480"
             android:textColor="@android:color/black" />
@@ -95,7 +95,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:layout_marginTop="10dp"
+        android:layout_marginVertical="16dp"
         android:background="@android:color/darker_gray" />
 
     <RelativeLayout
