--- a/TUM_Lens/app/src/main/res/drawable/ic_baseline_play_arrow_80.xml
+++ b/TUM_Lens/app/src/main/res/drawable/ic_baseline_play_arrow_80.xml
@@ -1,7 +1,7 @@
 <vector
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:height="80dp"
-    android:tint="#FFFFFF"
+    android:tint="@color/white"
     android:viewportHeight="24"
     android:viewportWidth="24"
     android:width="80dp">
