--- a/TUM_Lens/app/src/main/res/layout/fragment_camera_roll_predictions.xml
+++ b/TUM_Lens/app/src/main/res/layout/fragment_camera_roll_predictions.xml
@@ -276,7 +276,7 @@
         android:textAlignment="center"
         android:layout_marginTop="8dp"
         android:textSize="12sp"
-        android:textColor="#ccc"
+        android:textColor="@color/black"
         android:text=""/>
 
 </LinearLayout>
