--- a/TUM_Lens/app/src/main/res/layout/fragment_predictions.xml
+++ b/TUM_Lens/app/src/main/res/layout/fragment_predictions.xml
@@ -238,7 +238,7 @@
         android:textAlignment="center"
         android:layout_marginTop="8dp"
         android:textSize="12sp"
-        android:textColor="#ccc"
+        android:textColor="@color/black"
         android:text="@string/not_available"/>
 
 </LinearLayout>
