--- a/TUM_Lens/app/src/main/res/layout/activity_classification_bottom_sheet.xml
+++ b/TUM_Lens/app/src/main/res/layout/activity_classification_bottom_sheet.xml
@@ -37,7 +37,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="#DBDCE0"
+        android:background="@android:color/darker_gray"
         android:layout_marginVertical="16dp"/>
 
     <!--  PER FRAME RESULTS CONTAINER  -->
@@ -50,7 +50,7 @@
         android:fontFamily="sans-serif-medium"
         android:text="@string/per_frame_classification_results"
         android:textSize="16sp"
-        android:textColor="#444" />
+        android:textColor="@color/black" />
     <FrameLayout
         android:id="@+id/perframe_results_container"
         android:layout_width="match_parent"
@@ -72,7 +72,7 @@
         android:fontFamily="sans-serif-medium"
         android:text="@string/model"
         android:textSize="16sp"
-        android:textColor="#444" />
+        android:textColor="@color/black" />
     <FrameLayout
         android:id="@+id/modelselector_container"
         android:layout_width="match_parent"
@@ -94,7 +94,7 @@
         android:text="@string/other_settings"
         android:textSize="16sp"
         android:paddingBottom="4dp"
-        android:textColor="#444" />
+        android:textColor="@color/black" />
 
     <!--  THREAD NUMBER  -->
     <FrameLayout
