--- a/TUM_Lens/app/src/main/res/layout/activity_start_screen.xml
+++ b/TUM_Lens/app/src/main/res/layout/activity_start_screen.xml
@@ -46,7 +46,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="48dp"
         android:textAlignment="textStart"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/givePermissionBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:lineHeight="24sp"
@@ -54,7 +54,7 @@
         android:text="@string/it_therefore" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/givePermissionBtn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
