--- a/TUM_Lens/app/src/main/res/values/colors.xml
+++ b/TUM_Lens/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="red">#f00</color>
     <color name="green">#0f0</color>
     <color name="blue">#00f</color>
+    <color name="yellow">#ff0</color>
 
     <!-- tf colors -->
     <color name="tfe_color_primary">#ffa800</color>
