--- a/TUM_Lens/app/src/main/res/layout/activity_classification.xml
+++ b/TUM_Lens/app/src/main/res/layout/activity_classification.xml
@@ -3,10 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_classification_root_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".classification.ClassificationActivity">
+    android:layout_height="match_parent">
 
     <!--  OUTPUT of LIVE Camera Feed  -->
     <androidx.camera.view.PreviewView
@@ -46,7 +44,6 @@
         tools:ignore="ContentDescription"/>
 
     <!--  play icon  -->
-    <!--  FIXME: play button is slightly off center when fade-in starts -->
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/btn_play"
         android:layout_width="wrap_content"
