Tried to find a aspect resolution of the camera that exactly fits the screen of the Xiao Mi 9. Turns out there's none.

--- a/TUM_Lens/app/src/main/res/layout/activity_detection_cam_fragment_tracking.xml
+++ b/TUM_Lens/app/src/main/res/layout/activity_detection_cam_fragment_tracking.xml
@@ -19,8 +19,8 @@
 
     <com.maxjokel.lens.detection.AutoFitTextureView
         android:id="@+id/texture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <com.maxjokel.lens.detection.OverlayView
         android:id="@+id/tracking_overlay"
