Make bottom sheet in Detection layout non-translucent in order to make the screen look better
Due to camera <> display aspect ratio mismatches the bottom of the screen might be empty but this way the empty space is a bit hidden

--- a/TUM_Lens/app/src/main/res/layout/activity_detection.xml
+++ b/TUM_Lens/app/src/main/res/layout/activity_detection.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/black">
+    android:background="@android:color/white">
 
     <FrameLayout
         android:id="@+id/container"
@@ -21,7 +21,7 @@
         android:id="@+id/activity_detection_bottom_sheet_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:alpha="0.85"
+        android:alpha="1"
         android:background="@drawable/rounded_corners"
         app:behavior_hideable="false"
         app:behavior_peekHeight="140dp"
