--- a/TUM_Lens/app/src/main/res/layout/activity_detection_bottom_sheet.xml
+++ b/TUM_Lens/app/src/main/res/layout/activity_detection_bottom_sheet.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_detection_bottom_sheet_layout"
     android:layout_width="match_parent"
@@ -58,7 +59,7 @@
             android:id="@+id/crop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Crop"
+            android:text="Crop processed by TF Lite"
             android:textColor="@android:color/black" />
 
         <TextView
