--- a/TUM_Lens/app/src/main/res/values/styles.xml
+++ b/TUM_Lens/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
@@ -15,10 +16,9 @@
         <item name="android:textViewStyle">@style/RobotoTextViewStyle</item>
         <item name="android:buttonStyle">@style/RobotoButtonStyle</item>
 
-        <!-- Edge-to-edge app content: https://developer.android.com/training/gestures/gesturenav       -->
-        <!-- does nothing, but should somehow work...        -->
         <item name="android:navigationBarColor">@android:color/black</item>
-        <item name="android:statusBarColor">@android:color/black</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">false</item>
+        <item name="android:windowTranslucentStatus">true</item>
 
         <!-- TODO: make transition smooth, especially between classification and detection mode -->
         <!-- enable window content transitions -->
