fixed the way the app works if a certain model is not downloaded yet, I cannot choose this model unless downloaded first to avoid problems

--- a/TUM_Lens/app/src/main/res/layout/fragment_model_selector.xml
+++ b/TUM_Lens/app/src/main/res/layout/fragment_model_selector.xml
@@ -46,6 +46,7 @@
             android:background="@drawable/button_custom"
             android:tag="mobilenet_v1_224.tflite"
             android:text="@string/download"
+            android:enabled="false"
             android:textSize="11sp" />
 
         <!--    ROW 2, 3 ... will be inserted here programmatically    -->
