--- a/TUM_Lens/app/src/main/res/layout/fragment_model_selector_detection.xml
+++ b/TUM_Lens/app/src/main/res/layout/fragment_model_selector_detection.xml
@@ -38,6 +38,7 @@
             android:background="@drawable/button_custom"
             android:tag="detect.tflite"
             android:text="@string/download"
+            android:enabled="false"
             android:textSize="11sp" />
 
         <!--    ROW 2, 3 ... will be inserted here programmatically    -->
