--- a/TUM_Lens/app/src/main/res/layout/activity_classification_bottom_sheet.xml
+++ b/TUM_Lens/app/src/main/res/layout/activity_classification_bottom_sheet.xml
@@ -114,6 +114,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <FrameLayout
+        android:id="@+id/delay_time_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <!--  horizontal separator  -->
     <View
         android:layout_width="match_parent"
