--- a/TUM_Lens/app/src/main/res/layout/activity_detection_bottom_sheet.xml
+++ b/TUM_Lens/app/src/main/res/layout/activity_detection_bottom_sheet.xml
@@ -167,6 +167,41 @@
         </LinearLayout>
     </RelativeLayout>
 
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp">
+
+        <EditText
+            android:id="@+id/delay_time_edit_text_detector"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:textSize="15sp"
+            android:hint="Please enter delay time in seconds"
+            android:inputType="number" />
+
+        <android.widget.Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/delay_time_button_detector"
+            android:layout_alignParentEnd="true"
+            android:background="@drawable/button_custom"
+            android:text="Apply"
+            android:textSize="11sp"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:id="@+id/delay_text_detector"
+            android:layout_below="@+id/delay_time_edit_text_detector"
+            android:text="dsadasasd"/>
+    </RelativeLayout>
+
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
