ADDED sign language to toggle to start Sign Language Translation activity also added dependencies & assets

--- a/TUM_Lens/app/src/main/res/layout/btn_detection_mode.xml
+++ b/TUM_Lens/app/src/main/res/layout/btn_detection_mode.xml
@@ -23,6 +23,11 @@
             android:text="@string/object_detection"
             style="@style/MaterialButtonToggleGroupStyle"
             />
+        <Button
+            android:id="@+id/btn_sign_language"
+            android:text="@string/sign_language"
+            style="@style/MaterialButtonToggleGroupStyle"
+            />
     </com.google.android.material.button.MaterialButtonToggleGroup>
 
 </RelativeLayout>
