--- a/TUM_Lens/app/src/main/res/layout/activity_sign_language.xml
+++ b/TUM_Lens/app/src/main/res/layout/activity_sign_language.xml
@@ -13,6 +13,20 @@
     </FrameLayout>
     -->
 
+    <!--
+    <RelativeLayout
+        android:id="@+id/loadingPanel"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center" >
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true" />
+    </RelativeLayout>
+    -->
+
     <androidx.camera.view.PreviewView
         android:id="@+id/sign_language_camera"
         android:layout_width="match_parent"
