--- a/TUM_Lens/app/src/main/res/layout/fragment_predictions_sign.xml
+++ b/TUM_Lens/app/src/main/res/layout/fragment_predictions_sign.xml
@@ -10,6 +10,19 @@
 
     <!--  PER FRAME CLASSIFICATION RESULTS  -->
 
+    <!-- MISSING INFORMATION -->
+
+    <TextView
+        android:id="@+id/missing_info"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:layout_marginTop="8dp"
+        android:textSize="12sp"
+        android:textColor="@color/black"
+        android:text=""
+        />
+
     <!--  RESULTS row 0  -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/pf_row0"
