--- a/TUM_Lens/app/src/main/res/layout/fragment_predictions_sign.xml
+++ b/TUM_Lens/app/src/main/res/layout/fragment_predictions_sign.xml
@@ -20,7 +20,7 @@
         android:layout_marginTop="8dp"
         android:textSize="12sp"
         android:textColor="@color/black"
-        android:text=""
+        android:text="missing info"
         />
 
     <!--  RESULTS row 0  -->
